--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,5 +1,6 @@
 footer {
     background-color: #363636;
+    min-height: 12vh;
     .footer-container {
         color: white;
         padding: 25px;
