--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -29,6 +29,7 @@
     border-radius: 40px 40px 0 0;
     display: flex;
     flex-direction: column;
+    min-height: calc(100vh - 33vh);
     .menu-title-container {
         width: 100%;
         display: flex;
